tests/baselines/reference/superPropertyAccess1.errors.txt
superPropertyAccess1.ts(13,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
superPropertyAccess1.ts(19,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
superPropertyAccess1.ts(24,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


==== superPropertyAccess1.ts (3 errors) ====
    class C {
        public foo() { }
        public get x() {
            return 1;
        }
    
        public bar() { }
    }
    
    class D extends C {
        public foo() {
            super.bar();
            super.x;  // error
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }    
    
        constructor() {
            super();
            super.bar();
            super.x;  // error
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    
        public get y() {
            super.bar();
            super.x; // error
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
            return 1;
        }
    }